# META-COMPILER

./: .gitignore  CLAUDE.md  LLM_INSTRUCTIONS.md  META-COMPILER.md  PROBLEM_STATEMENT.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/: copilot-instructions.md
meta_compiler/: __init__.py  artifacts.py  cli.py  findings_loader.py  immutable_sources.py  io.py  project_types.py  utils.py  validation.py  wiki_browser.py  wiki_edit_manifest.py  wiki_interface.py  wiki_lifecycle.py  wiki_linking.py  wiki_rendering.py
meta_compiler_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
prompts/: README.md  create-prompt.prompt.md  ingest-orchestrator.prompt.md  requirements-audit.prompt.md  run-all.prompt.md  stage-0-init.prompt.md  stage-1a-breadth.md  stage-1a-breadth.prompt.md  stage-1a2-orchestration.prompt.md  stage-1b-evaluators.md  stage-1b-evaluators.prompt.md  stage-1c-review.prompt.md  stage-2-dialog.prompt.md  stage-3-scaffold.prompt.md  stage-4-finalize.prompt.md  stage2-reentry.prompt.md  wiki-update.md  wiki-update.prompt.md
scripts/: README.md  _docx_revisions.py  _docx_selectors.py  edit_document.py  pdf_to_text.py  read_document.py  write_document.py
tests/: test_add_code_seed.py  test_agent_hooks_frontmatter.py  test_capability_compile_stage.py  test_capability_graph_validator.py  test_code_ingest.py  test_concept_reconciliation_stage.py  test_contract_extract_stage.py  test_decision_log_validation.py  test_edit_document.py  test_elicit_vision_finalize.py  (+42 more)
(+195 files in other folders)
